workstation lock and terminal services running.
[2916338] "Edit Base entry" now works for Alias entries as well as for Shortcuts.
[2913440] Copy/Send Email menu items now correctly activated if email field
is set or 'mailto:' used in URL field.
[2912177] Restore 'Add Group' menu item to context menu when clicking
on an entry and allow new group to remain unchanged.
[] Finally fix issues running under pre-XP versions of Windows.

New Features for 3.20.1
=======================
[2919319] Now able to use PasswordSafe to generator passwords as per user defined
policy from the Manage menu.
[] Implemented support for new functions: Undo/Redo of changes to the currently open
database.  These functions are on the Edit menu and can also be configured to be on
the Toolbar.  These are database specific and changes can even be undone after the
database has been saved, although the datbase will need to be resaved to retain the
new state.
[] New Synchronize option (subset of the current Merge fucntion) to allow fields in
of entries 2 databases to be synchronised.  Entries are eligible to be selected for
synchronisation if they have identical Group names, Titles and User names. The
database selected to be synchronised with the current open database is now always in
read-only mode i.e. Synchronisation is uni-directional and only entries in the
currently open database can be modified.

Changes to Existing Features in 3.20.1
======================================
During database Compare, the database selected to be compared with the currently open
database is now always in read-only mode.

Bugs fixed in 3.20
==================
[2906249] User changes to List view's column order are now persistent.
[2905961] ESC key now works correctly in View Entry when in RO mode.
[2873106] Export XML warnings now consistent with Export Text's.
[2872829] Duplicating an entry now copies the password policy as well.
[2872602] Preferences are now correctly deleted from the Windows registry