@@ -150,7 +150,7 @@ BEGIN
   IDS_STRICT_LOCKED       "The database:\n%s\n\nis apparently being used by:\n%s%s.\n\nOpen the database for Read-Only or Exit?\r\n\r\nNote: Only one user at a time can open the database for writing."
   IDS_FILEINUSE           "File In Use"
   IDS_FILEOPEN            "File open error."
-  IDS_SAFENOTEXIST        "\n\nCannot open database. It probably does not exist.\nA new database will be created."
+  IDS_SAFENOTEXIST        "\n\nCannot open database. It probably does not exist.\nPlease select to Open another database, create a New database or Cancel."
   IDS_SAVECHANGES         "Do you wish to save the changes made to database:\r\n\r\n%s\r\n\r\nor Cancel the shutdown\\restart\\logoff?"
   IDS_NUMITEMS            "%d items"
   IDS_NUMITEMSFILTER      "%d (%d) items"
@@ -568,6 +568,7 @@ BEGIN
   IDS_READWRITE             "Read-Write"
   IDS_EXIT                  "E&xit"
   IDS_SEARCH                "&Search"
+  IDS_OPEN                  "&Open"
   IDS_NEW                   "&New"
   IDS_HELP                  "Help"
   IDS_OK                    "OK"
